Fixed word wrap in todo

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ input, select{
     padding: 15px;
     margin-top: 30px;
     font-size: 24px;
+    word-wrap: break-word;
 }
 
 i{
